# django-filer-image

./: pyproject.toml
django_filer_image/: apps.py  convertor.py  models.py  settings.py  views.py
django_filer_image/jinja2/filer_images/: image.html.j2
django_filer_image/migrations/: 0001_initial.py
example/example/: settings.py
tests/: test_django_filer_image.py
